--- a/package.json
+++ b/package.json
@@ -3,18 +3,25 @@
   "description": "",
   "version": "0.0.26",
   "dependencies": {
-    "redux": "3.7.2",
-    "react-redux": "5.0.6",
+    "npm": "^6.5.0",
+    "react": "16.0.0",
     "react-dom": "16.0.0",
-    "react": "16.0.0"
+    "react-redux": "5.0.6",
+    "redux": "3.7.2"
   },
   "devDependencies": {
-    "react-scripts": "1.0.0"
+    "react-scripts": "2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
